feat: add subscription payment backend

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.2.1",
     "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^3.1.10",
+    "stripe": "^12.16.0",
     "vercel": "^37.14.0"
   }
 }
