--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -3,3 +3,5 @@ PORT=5000
 NODE_ENV=development
 JWT_SECRET=votre_secret_jwt_tres_securise
 FRONTEND_URL=http://localhost:5173
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
