--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb+srv://Gabain:&PcZynGvoBILr1836@cluster0.f0dujm4.mongodb.net/
+MONGO_URI=mongodb+srv://Gabain:&PcZynGvoBILr1836@cluster0.f0dujm4.mongodb.net/
+# MONGODB_URI is also accepted for backwards compatibility
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=votre_secret_jwt_tres_securise
