--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.2.1",
     "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^3.1.10",
+    "socket.io": "^4.7.4",
     "stripe": "^12.16.0",
     "vercel": "^37.14.0"
   }
