--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.0",
-    "react-to-print": "^3.1.0"
+    "react-to-print": "^3.1.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
