--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,8 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.0",
     "react-to-print": "^3.1.0",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
